problem solved: post grid figure was partly covered by image. Solved by removing "display:block" property

--- a/src/styles/components/post-grid.scss
+++ b/src/styles/components/post-grid.scss
@@ -13,7 +13,6 @@
     padding-bottom: 50px;
 
     img {
-        display: block;
         position: relative; // fit with "overlay"'s position which is "absolute"
         border-radius: 5px;
         overflow: hidden; //The overflow is clipped, and the rest of the content will be invisible
